# StateFlow

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
stateflow/: __init__.py  cli.py
stateflow/core/: __init__.py
stateflow/lambda/: __init__.py
test/: test_cli.py
